Fixed micro-spacing

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -37,6 +37,8 @@
     line-height: 58px;
     letter-spacing: -1px;
     margin: auto;
+    position: relative;
+    top: 1px;
 
     &,
     &:visited {
@@ -48,15 +50,17 @@
     letter-spacing: -1px;
     padding-left: 1.5em;
     border-left: 2px solid #424242;
-    margin-top: 2px;
+    margin-top: 3px;
 }
 
 .blog-homepage:link, .blog-homepage:visited {
   color: #2b2b2b;
   text-decoration: none;
-  font-size: 36px;
+  font-size: 34px;
   text-shadow: 1px 1px 1px #444444;
   font-weight: bold;
+  position: relative;
+  top: 1px;
 }
 
 .blog-homepage:hover {
@@ -73,13 +77,16 @@
 .blog-blogpage:link, .blog-blogpage:visited {
   color: #dddddd;
   text-decoration: none;
-  font-size: 36px;
+  font-size: 34px;
   text-shadow: 2px 2px 2px #2a2a2a;
   font-weight: bold;
+  position: relative;
+  top: 1px;
 }
 
 .blog-blogpage:hover {
-  color: #232933;
+  color: #eeeeee;
+  text-shadow: 2px 2px 2px #555;
 }
 
 .blog-blogpage:active {
@@ -87,18 +94,6 @@
   position: relative;
   top: 1px;
   left: 1px;
-}
-
-.blog-blogpage {
-    font-size: 26px;
-    line-height: 56px;
-    letter-spacing: -1px;
-    margin: auto;
-
-    &,
-    &:visited {
-        color: $text-color;
-    }
 }
 
 .site-nav {
